<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#F1DFD0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_asset1"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/editCurrentUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_user_id"
            android:padding="14dp"
            android:background="@drawable/edittext_background"
            android:textColor="#0E3D43"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />

        <Spinner
            android:id="@+id/ownedAssetSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTargetUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_user_id"
            android:padding="14dp"
            android:background="@drawable/edittext_background"
            android:textColor="#0E3D43"
            android:textSize="16sp"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:padding="14dp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-medium"
            android:backgroundTint="#C62828"
            android:layout_marginTop="8dp"
            android:elevation="4dp" />
    </LinearLayout>
</ScrollView>
