<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F1DFD0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/assign_asset2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/card_background"
            android:elevation="6dp">

            <EditText
                android:id="@+id/editUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_user_id"
                android:inputType="text"
                android:padding="12dp"
                android:background="@drawable/edittext_background"
                android:textColor="#444"
                android:textColorHint="@color/black" />

            <Spinner
                android:id="@+id/assetSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#444" />

            <Button
                android:id="@+id/btnAssign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assign"
                android:layout_marginTop="24dp"
                android:padding="14dp"
                android:backgroundTint="#C62828"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:letterSpacing="0.05" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
